cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_149.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/des/ecb_enc.c:40: error: DEAD_STORE
  The value written to &in (type unsigned char const *) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/des/ecb_enc.c:40:5: Write of unused value
38.       c2l(in, l);
39.       ll[0] = l;
40.       c2l(in, l);
          ^
41.       ll[1] = l;
42.       DES_encrypt1(ll, ks, enc);
